<resources>
    <string name="app_name">ProPlanner</string>
    <string name="budget_planner">Budget Planner</string>
    <string name="img_budget_planner">Budget Planner Image</string>
    <string name="welcome_budget_planner">Welcome to Budget Planner</string>
    <string name="des_budget_planner">\t\t\t\tEasily create budgets, \n\ttake control of your money,\n\t\t and track your spending.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="prj_budget_name">\t\tBudget Plan 01</string>
    <string name="budget">Budgets</string>
    <string name="expenses">Expenses</string>
    <string name="img_logo">Image of Logo</string>
    <string name="img_profile">Image of Profile</string>
    <string name="total_budget">Total Budget</string>
    <string name="total_price">Rs. 100,000</string>
    <string name="spent_b">Spent</string>
    <string name="available_b">Available</string>
    <string name="spent_bv">Rs.20,000</string>
    <string name="available_bv">Rs.80,000</string>
    <string name="activities">Activity</string>
    <string name="create">Create</string>
    <string name="view">View</string>
    <string name="insight">Insight</string>
    <string name="recommendation">Tips</string>
    <string name="btn_create">Button Budget Create</string>
    <string name="btn_view">Button Budget View</string>
    <string name="btn_insight">Button Insight</string>
    <string name="btn_tips">Button Tips</string>
    <string name="btn_back">Button Back</string>
    <string name="demo_budget_title1">PROJECT XX</string>
    <string name="demo_budget1">Budget : Rs.XXX,XXX\n\nExpenses : Rs.XX,XXX\n\nAvailable : Rs.XX,XXX</string>
    <string name="btn_add">Button Add</string>
    <string name="create_budget">Create Budget</string>
    <string name="placeholder_prj_name">Project Name</string>
    <string name="placeholder_prj_budget">Project Budget</string>
    <string name="btn_continue">Continue</string>
    <string name="placeholder_add_cat">Category Name</string>
    <string name="placeholder_cat_estimate">Estimated Budget</string>
    <string name="btn_add_cat">Add Category</string>
    <string name="btn_save">Save</string>
    <string name="new_budget">Category Details\n\t\t\t\t\t\t\t\t\tand\n\t\t\t\t\tEstimates</string>
    <string name="placeholder_price">XX,XXX</string>
    <string name="cat1">Category XX</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="prj_budget">Budget : Rs.XX,XXX</string>
    <string name="available">Available\nRs.XX,XXX</string>
    <string name="btn_minus">Button Minus</string>
    <string name="budget_planning_tip">Budget Planning Tip XX</string>
    <string name="tipXX">Follow this tip to achieve\nmore profit</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Log in</string>
    <string name="username_or_email">Username or Email</string>
    <string name="new_user">New User : <u><b>SignUp</b></u> here</string>
    <string name="existing_user">Already have an account : <u><b>Log In</b></u> here</string>
    <string name="des_pro_planner">Keep your business records up to date,\n\t\t\t\t\t\tFollow tips from expertise,\n\t\t\t\t\tAchieve your business goals.</string>
    <string name="project_planner">My Plans</string>
    <string name="inventory">Inventory</string>
    <string name="btn_budget">My Budgets</string>
    <string name="sales">Sales</string>
    <string name="my_profile">My Profile</string>
    <string name="greeting"><![CDATA[<<NAME>>]]></string>
    <string name="u_name">XXXXXX</string>
    <string name="u_email">xxxxxx@gmail.com</string>
    <string name="project_name">Project Name</string>
    <string name="textview">TextView</string>
    <string name="loading_data">Loading Data....</string>
    <string name="placeholder_available">Available</string>
    <string name="tips_budget">Tips for your projects</string>
    <string name="search_et">Search</string>
    <string name="insights">Project Insights</string>
    <string name="plan_create">Create Plan</string>
    <string name="pj_description">Project Description</string>
    <string name="plan_dashboard">Plan Dashboard</string>
    <string name="Stasks">Tasks</string>
    <string name="add_task">Add task</string>
    <string name="_02">02)</string>
    <string name="_01">01)</string>
    <string name="period">Time Period</string>
    <string name="save">save</string>
    <string name="project00">Project 00</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>

    <string name="demo_product">Product Name : Product X\n\nQuantity : XXX\n\nSupplier : Supplier X</string>
    <string name="product">Product</string>
    <string name="new_product">New Product</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier Name</string>
    <string name="price">Price</string>
    <string name="product_title">Product X</string>
    <string name="inventory_controller">Inventory Manager</string>
    <string name="welcome">Welcome to Inventory Manager</string>
    <string name="des_welcome">\t\t\t\tEasily add new product details,\n\t\t\t\t\t\t\t\ttrack inventory details</string>
    <string name="tips_inventory">Inventory Management Tips</string>
    <string name="demo_tip">Try to keep your inventories\nup to date, and make your business\n move on track.</string>
    <string name="demo_quantity">XXX</string>
    <string name="demo_supplier">Supplier X</string>


    <string name="welcome_sales_manager">Welcome to Sales Manager</string>
    <string name="sales_manager">Sales Manager</string>
    <string name="sales_planner_img">Image Sales Planner</string>
    <string name="des_sales_planner">\tEasily create sales orders, \n\ttake control of your orders,\n\t\t\t\t\tand track your sales.</string>
    <string name="add_details">\t\t\t\t\t\t\tAdd\nSale Details</string>
    <string name="view_details">\t\t\t\t\t\tView\nSale Records</string>
    <string name="add">Add Sales Details</string>
    <string name="name">Product Name</string>
    <string name="productX">Product X</string>
    <string name="batch_no">Batch No</string>
    <string name="batchX">Batch X</string>
    <string name="qtyX">XXX</string>
    <string name="unit_price">X,XXX</string>
    <string name="qty">Quantity</string>
    <string name="unit_price_title">Unit Price</string>
    <string name="date">Date</string>
    <string name="add_sale">Add</string>
    <string name="cancel">Cancel</string>
    <string name="demo_sales_details">Product Name : Product X\n\nBatch No : XX\n\nPrice : Rs.XX,XXX</string>

</resources>