<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BudgetDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/layout_bg"
            android:translationZ="80dp">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="58dp"
                android:layout_height="65dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/btn_back"
                android:scaleType="centerCrop"
                android:translationX="5dp"
                android:translationY="7dp"
                app:srcCompat="@drawable/backbtn"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/tvFullAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_budget_title1"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:translationX="130dp"
                android:translationY="15dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edit_text"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="180dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/placeholder_prj_budget"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etBudget"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:hint="@string/placeholder_cat_estimate"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="#78909C"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/btn_update"
                    android:textColor="#263238"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_btn_delete"
                    android:text="@string/btn_delete"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>