<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/purple_500"
    tools:context=".activities.InventoryDashboard">

    <androidx.cardview.widget.CardView
        android:layout_width="334dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="72dp"
        android:translationZ="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_tip"
            android:textColor="@color/heading3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="10dp"
            android:translationY="10dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="312dp"
        android:text="@string/tips_inventory"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/layout_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/btnProback"
            android:layout_width="58dp"
            android:layout_height="65dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_back"
            android:scaleType="centerCrop"
            android:translationX="5dp"
            android:translationY="7dp"
            app:srcCompat="@drawable/backbtn"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />





        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_controller"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            android:translationX="80dp"
            android:translationY="70dp" />

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="383dp"
        android:translationZ="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="59dp"
            android:layout_height="57dp"
            android:background="@drawable/btn_rounded_corner"
            android:contentDescription="@string/btn_create"
            android:scaleType="fitStart"
            android:src="@drawable/addbudget"
            android:translationX="50dp"
            android:translationY="10dp"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/heading3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="50dp"
            android:translationY="70dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="383dp"
        android:translationZ="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textColor="@color/heading3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="55dp"
            android:translationY="70dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="52dp"
            android:layout_height="57dp"
            android:background="@drawable/btn_rounded_corner"
            android:contentDescription="@string/btn_view"
            android:scaleType="fitStart"
            android:src="@drawable/search"
            android:translationX="50dp"
            android:translationY="10dp"
            tools:ignore="RedundantDescriptionCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="334dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="192dp"
        android:translationZ="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_tip"
            android:textColor="@color/heading3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="10dp"
            android:translationY="10dp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>